--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,14 @@
 rootProject.name = 'java-instrumentation-template'
+include 'tibco-amf-platform-runtime'
+include 'tibco-amf-soap'
+include 'tibco-amf-spline'
+include 'tibco-amf-web'
+include 'tibco-amsb-engine'
+include 'tibco-amsb-rt'
+include 'tibco-amx-java-connector'
+include 'tibco-bx-amx'
+include 'tibco-bx-core'
+include 'tibco-jms-binding'
+include 'tibco-pvm-infra'
+include 'tibco-rest-binding'
+include 'tibco-tcp-binding'
