--- a/tibco-amf-platform-runtime/build.gradle
+++ b/tibco-amf-platform-runtime/build.gradle
@@ -2,14 +2,13 @@
 apply plugin: 'java'
 
 dependencies {
-  compile fileTree(include: ['*.jar'], dir: 'lib')
 
   // Agent and Weave API jars:
-  compile 'com.newrelic.agent.java:newrelic-api:3.30.0'
-  compile 'com.newrelic.agent.java:newrelic-weaver-api:3.30.0'
+  implementation 'com.newrelic.agent.java:newrelic-api:6.4.1'
 
-  // New Relic internal: compile against the Bridge when required:
-  // compile 'com.newrelic.agent.java:agent-bridge:3.30.0'
+  implementation fileTree(include: ['*.jar'], dir: 'lib')
+  implementation fileTree(include: ['*.jar'], dir: '../libs')
+
 }
 
 jar {
