--- a/tibco-amf-web/build.gradle
+++ b/tibco-amf-web/build.gradle
@@ -2,15 +2,13 @@
 apply plugin: 'java'
 
 dependencies {
-  compile fileTree(include: ['*.jar'], dir: 'lib')
   compile 'javax.servlet:javax.servlet-api:3.0.1'
 
   // Agent and Weave API jars:
-  compile 'com.newrelic.agent.java:newrelic-api:5.11.0'
-  compile 'com.newrelic.agent.java:newrelic-weaver-api:5.11.0'
+  compile 'com.newrelic.agent.java:newrelic-api:6.4.1'
 
-  // New Relic internal: compile against the Bridge when required:
-  // compile 'com.newrelic.agent.java:agent-bridge:5.11.0'
+  compile fileTree(include: ['*.jar'], dir: 'lib')
+  compile fileTree(include: ['*.jar'], dir: '../libs')
 }
 
 jar {
