--- a/tibco-amx-java-connector/build.gradle
+++ b/tibco-amx-java-connector/build.gradle
@@ -2,14 +2,14 @@
 apply plugin: 'java'
 
 dependencies {
-  implementation fileTree(include: ['*.jar'], dir: 'lib')
   
   // Agent and Weave API jars:
-  implementation 'com.newrelic.agent.java:newrelic-api:5.11.0'
-  implementation 'com.newrelic.agent.java:newrelic-weaver-api:5.11.0'
+  implementation 'com.newrelic.agent.java:newrelic-api:6.4.1'
 
   // New Relic internal: implementation against the Bridge when required:
-  // implementation 'com.newrelic.agent.java:agent-bridge:5.11.0'
+  // implementation 'com.newrelic.agent.java:agent-bridge:6.4.1'
+  implementation fileTree(include: ['*.jar'], dir: 'lib')
+  implementation fileTree(include: ['*.jar'], dir: '../libs')
 }
 
 jar {
