--- a/tibco-bx-amx/build.gradle
+++ b/tibco-bx-amx/build.gradle
@@ -4,15 +4,17 @@ apply plugin: 'java'
 dependencies {
 
   // Agent and Weave API jars:
-  compile 'com.newrelic.agent.java:newrelic-api:6.4.1'
+  implementation 'com.newrelic.agent.java:newrelic-api:6.4.1'
 
-  compile fileTree(include: ['*.jar'], dir: 'lib')
-  compile fileTree(include: ['*.jar'], dir: '../libs')
+  // New Relic internal: compile against the Bridge when required:
+  // compile 'com.newrelic.agent.java:agent-bridge:6.4.1'
+  implementation fileTree(include: ['*.jar'], dir: '../libs')
+  implementation fileTree(include: ['*.jar'], dir: 'lib')
 }
 
 jar {
   manifest {
-       attributes 'Implementation-Title': 'com.newrelic.instrumentation.tibco-amf-spline'
+       attributes 'Implementation-Title': 'com.newrelic.instrumentation.tibco-bx-amx'
        attributes 'Implementation-Vendor': 'New Relic'
        attributes 'Implementation-Vendor-Id': 'Field Instrumentation'
        attributes 'Implementation-Version': 1.0
