--- a/tibco-bx-core/build.gradle
+++ b/tibco-bx-core/build.gradle
@@ -2,17 +2,17 @@
 apply plugin: 'java'
 
 dependencies {
-
+	
   // Agent and Weave API jars:
   compile 'com.newrelic.agent.java:newrelic-api:6.4.1'
 
-  compile fileTree(include: ['*.jar'], dir: 'lib')
-  compile fileTree(include: ['*.jar'], dir: '../libs')
+  implementation fileTree(include: ['*.jar'], dir: 'lib')
+  implementation fileTree(include: ['*.jar'], dir: '../libs')
 }
 
 jar {
   manifest {
-       attributes 'Implementation-Title': 'com.newrelic.instrumentation.tibco-amf-spline'
+       attributes 'Implementation-Title': 'com.newrelic.instrumentation.tibco-bx-core'
        attributes 'Implementation-Vendor': 'New Relic'
        attributes 'Implementation-Vendor-Id': 'Field Instrumentation'
        attributes 'Implementation-Version': 1.0
@@ -20,6 +20,5 @@ jar {
 }
 
 verifyInstrumentation {
-  // See Verifier plugin documentation:
-  // https://source.datanerd.us/java-agent/gradle-verify-instrumentation-plugin
+  passes 'com.tibco:bx-core:[1.15.1.001]'
 }
