--- a/tibco-pvm-infra/build.gradle
+++ b/tibco-pvm-infra/build.gradle
@@ -9,14 +9,14 @@ dependencies {
   compile 'com.newrelic.agent.java:newrelic-api:3.30.0'
   compile 'com.newrelic.agent.java:newrelic-weaver-api:3.30.0'
 
-  // New Relic internal: compile against the Bridge when required:
+  // New Relic Labs internal: compile against the Bridge when required:
   // compile 'com.newrelic.agent.java:agent-bridge:3.30.0'
 }
 
 jar {
   manifest {
-       attributes 'Implementation-Title': 'com.newrelic.instrumentation.tibco-pvm-infra'
-       attributes 'Implementation-Vendor': 'New Relic'
+       attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.tibco-pvm-infra'
+       attributes 'Implementation-Vendor': 'New Relic Labs'
        attributes 'Implementation-Vendor-Id': 'Field Instrumentation'
        attributes 'Implementation-Version': 1.0
   }
